Added code to draw shapes

--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -30,6 +30,38 @@
         @include background_color(#00CAFF);
         margin: auto;
     }
+
+    #square {
+        width: 100px;
+        height: 100px;
+        background: red;
+    }
+ 
+    
+    #rectangle {
+        width: 200px;
+        height: 100px;
+        background: red;
+    }
+
+    #circle {
+        width: 10rem;
+        height: 10rem;
+        background: red;
+        -moz-border-radius: 50%;
+        -webkit-border-radius: 50%;
+        border-radius: 50%;
+    }
+
+
+    #triangle{
+        width: 0;
+        height: 0;
+        border-left: 50px solid transparent;
+        border-right: 50px solid transparent;
+        border-bottom: 100px solid red;
+    }
+
 }
 
 
