--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -31,35 +31,56 @@
         margin: auto;
     }
 
-    #square {
-        width: 100px;
-        height: 100px;
-        background: red;
-    }
+    // #square {
+    //     width: 100px;
+    //     height: 100px;
+    //     background: red;
+    // }
  
     
-    #rectangle {
-        width: 200px;
-        height: 100px;
+    // #rectangle {
+    //     width: 200px;
+    //     height: 100px;
+    //     background: red;
+    // }
+
+    // #circle {
+    //     width: 10rem;
+    //     height: 10rem;
+    //     background: red;
+    //     -moz-border-radius: 50%;
+    //     -webkit-border-radius: 50%;
+    //     border-radius: 50%;
+    // }
+
+
+    // #triangle{
+    //     width: 0;
+    //     height: 0;
+    //     border-left: 50px solid transparent;
+    //     border-right: 50px solid transparent;
+    //     border-bottom: 100px solid yellow;
+    // }
+
+    .square{
         background: red;
+        margin: 0;
     }
 
-    #circle {
-        width: 10rem;
-        height: 10rem;
-        background: red;
-        -moz-border-radius: 50%;
-        -webkit-border-radius: 50%;
+    .circle{
         border-radius: 50%;
+        background: purple;
+        margin: 0;
     }
 
+    .rectangle{
+        background: green;
+        margin: 0;
+    }
 
-    #triangle{
+    .triangle{
         width: 0;
         height: 0;
-        border-left: 50px solid transparent;
-        border-right: 50px solid transparent;
-        border-bottom: 100px solid red;
     }
 
 }
