Added code to fix how the triangle is displayed. Also adding code to get data from the shape when it is clicked

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -35,5 +35,8 @@
     background: green;
     margin: 0; }
   .container .triangle {
+    position: relative;
     width: 0;
-    height: 0; }
+    height: 0;
+    border-style: solid;
+    border-color: transparent transparent yellow transparent; }
