--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -79,8 +79,11 @@
     }
 
     .triangle{
+        position: relative;
         width: 0;
         height: 0;
+        border-style: solid;
+        border-color: transparent transparent yellow transparent;
     }
 
 }
