--- a/resources/styles/style.scss
+++ b/resources/styles/style.scss
@@ -63,23 +63,26 @@
     // }
 
     .square{
+        position: absolute;
         background: red;
         margin: 0;
     }
 
     .circle{
+        position: absolute;
         border-radius: 50%;
         background: purple;
         margin: 0;
     }
 
     .rectangle{
+        position: absolute;
         background: green;
         margin: 0;
     }
 
     .triangle{
-        position: relative;
+        position: absolute;
         width: 0;
         height: 0;
         border-style: solid;
