--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -13,11 +13,12 @@
   .container .info-panel {
     width: 45%;
     height: 15em;
-    margin: auto;
     border: 0.1em solid black;
     padding: 0.75em;
     margin: auto auto 2em auto; }
   .container .shape-canvas {
+    display: inline-block;
+    overflow: auto;
     width: 100%;
     height: 35em;
     border: 0.1em solid black;
@@ -25,20 +26,20 @@
     background-color: #00CAFF;
     margin: auto; }
   .container .square {
-    position: absolute;
+    position: relative;
     background: red;
     margin: 0; }
   .container .circle {
-    position: absolute;
+    position: relative;
     border-radius: 50%;
     background: purple;
     margin: 0; }
   .container .rectangle {
-    position: absolute;
+    position: relative;
     background: green;
     margin: 0; }
   .container .triangle {
-    position: absolute;
+    position: relative;
     width: 0;
     height: 0;
     border-style: solid;
